deploy/configuration.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubemen
