deploy/kubemen.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: kubemen
  labels:
    app: kubemen
  namespace: kubemen
webhooks:
- name: kubemen.kubemen.svc
  failurePolicy: Ignore
  sideEffects: Some
  rules:
  - operations: ["CREATE", "UPDATE", "DELETE"]
    apiGroups: ["*"]
    apiVersions: ["*"]
    resources: [
    "cronjobs",
    "daemonsets",
    "deployments",
    "events",
    "horizontalpodautoscalers",
    "ingresses",
    "jobs",
    "pods",
    "replicasets",
    "replicationcontrollers",
    "services",
    "statefulsets",
    "certificates",
    "configmaps",
    "endpoints",
    "limitranges",
    "networkpolicies",
    "persistentvolumeclaims",
    "resourcequotas",
    "rolebindings",
    "roles",
    "secrets",
    "serviceaccounts"
    ]
    scope: "Namespaced"
  clientConfig:
    service:
      name: kubemen
      namespace: kubemen
      path: "/"
    caBundle: ${CA_BUNDLE}
  admissionReviewVersions:
  - v1beta1
  timeoutSeconds: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubemen
  labels:
    app: kubemen
  namespace: kubemen
spec:
  selector:
    matchLabels:
      app: kubemen
  template:
    metadata:
      name: kubemen
      labels:
        app: kubemen
    spec:
      securityContext:
        runAsUser: 65534 # nobody
      containers:
      - name: kubemen
        image: numberly/kubemen
        ports:
        - containerPort: 44300
        volumeMounts:
        - name: certs
          mountPath: /etc/ssl/kubemen
          readOnly: true
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 44300
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 44300
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 64Mi
      volumes:
      - name: certs
        secret:
          secretName: kubemen-certs

---
apiVersion: v1
kind: Service
metadata:
  name: kubemen
  labels:
    app: kubemen
  namespace: kubemen
spec:
  type: ClusterIP
  selector:
    app: kubemen
  ports:
  - port: 443
    protocol: TCP
    targetPort: 44300
